Add audio playback for French terms and update vocab set
Added "Audio" buttons to study and vocab pages, enabling French text-to-speech using the browser's speech synthesis API via a new JS function. Injected IJSRuntime for interop. Replaced vocab.json with a new set focused on household and apartment terms, expressions, and adverbs. Added speech synthesis logic to index.html with browser support checks and speech cancellation.

--- a/french-app/wwwroot/index.html
+++ b/french-app/wwwroot/index.html
@@ -28,6 +28,23 @@
         <a href="." class="reload">Reload</a>
         <span class="dismiss">🗙</span>
     </div>
+
+    <script>
+        window.speakText = function (text, lang) {
+            if (!text) return;
+            if (!('speechSynthesis' in window) || typeof SpeechSynthesisUtterance === 'undefined') {
+                console.warn('Speech synthesis is not supported in this browser.');
+                return;
+            }
+
+            // Cancel any in-progress speech so repeated clicks behave predictably.
+            window.speechSynthesis.cancel();
+
+            var utterance = new SpeechSynthesisUtterance(text);
+            utterance.lang = lang || 'fr-FR';
+            window.speechSynthesis.speak(utterance);
+        }
+    </script>
     <script src="_framework/blazor.webassembly#[.{fingerprint}].js"></script>
 </body>
 
