Select specific French voice for speech synthesis
Replaced dynamic language-based voice selection with direct use of the "com.apple.voice.compact.fr-FR.Thomas" voiceURI for French speech synthesis on Apple devices. This ensures consistent voice output but removes support for other languages and platforms.

--- a/french-app/wwwroot/index.html
+++ b/french-app/wwwroot/index.html
@@ -48,9 +48,7 @@
                 const voices = synth.getVoices();
 
                 // Try exact match first, then language prefix (fr vs fr-FR)
-                let voice =
-                    voices.find(v => v.lang === targetLang) ||
-                    voices.find(v => v.lang && v.lang.startsWith(targetLang.split('-')[0]));
+                let voice = voices.find(v => v.voiceURI === "com.apple.voice.compact.fr-FR.Thomas");
 
                 const utterance = new SpeechSynthesisUtterance(text);
 
