Add French-English match game with toast feedback
Added Match.razor page for a French ↔ English matching game with pagination, reset, and Bootstrap toast notifications for correct/incorrect matches. Updated navigation and home page to link to the new feature. Commented out the "Available voices" section on Home.razor. Included Bootstrap JS and a new toast.js script for toast support. Minor formatting update to MainLayout.razor.

--- a/french-app/wwwroot/index.html
+++ b/french-app/wwwroot/index.html
@@ -76,6 +76,8 @@
             }
         };
     </script>
+    <script src="lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="js/toast.js"></script>
     <script src="_framework/blazor.webassembly#[.{fingerprint}].js"></script>
 </body>
 
