Redesign home page, add voice selection for TTS
Redesigned Home.razor with a modern hero section and feature cards for browsing, flashcards, and matching games. Added UI for selecting and refreshing French voices using the browser's speech synthesis API, including a new VoiceInfo model. Refactored speech synthesis JS into voices.js with support for voice selection and improved async handling. Updated StudySession to make French text clickable for audio playback. Added .hover-card CSS for card effects. Changed About link to a relative path.

--- a/french-app/wwwroot/index.html
+++ b/french-app/wwwroot/index.html
@@ -30,55 +30,9 @@
         <span class="dismiss">🗙</span>
     </div>
 
-    <script>
-        window.speakText = function (text, lang) {
-            if (!text) return;
-
-            if (!('speechSynthesis' in window) || typeof SpeechSynthesisUtterance === 'undefined') {
-                console.warn('Speech synthesis is not supported in this browser.');
-                return;
-            }
-
-            const synth = window.speechSynthesis;
-            const targetLang = lang || 'fr-FR';
-
-            function speakNow() {
-                // Cancel any in-progress speech so repeated clicks behave predictably
-                synth.cancel();
-
-                const voices = synth.getVoices();
-
-                // Try exact match first, then language prefix (fr vs fr-FR)
-                let voice = voices.find(v => v.voiceURI === "com.apple.voice.compact.fr-FR.Thomas");
-
-                const utterance = new SpeechSynthesisUtterance(text);
-
-                if (voice) {
-                    utterance.voice = voice;
-                    utterance.lang = voice.lang;
-                } else {
-                    // fallback
-                    utterance.lang = targetLang;
-                    console.warn("No matching voice found for", targetLang);
-                }
-
-                synth.speak(utterance);
-            }
-
-            // Mobile browsers load voices asynchronously
-            if (synth.getVoices().length === 0) {
-                const handler = function () {
-                    synth.removeEventListener('voiceschanged', handler);
-                    speakNow();
-                };
-                synth.addEventListener('voiceschanged', handler);
-            } else {
-                speakNow();
-            }
-        };
-    </script>
     <script src="lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="js/toast.js"></script>
+    <script src="js/voices.js"></script>
     <script src="_framework/blazor.webassembly#[.{fingerprint}].js"></script>
 </body>
 
