--- a/french-app/wwwroot/index.html
+++ b/french-app/wwwroot/index.html
@@ -33,6 +33,7 @@
     <script src="lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="js/toast.js"></script>
     <script src="js/voices.js"></script>
+    <script src="js/confetti.js"></script>
     <script src="_framework/blazor.webassembly#[.{fingerprint}].js"></script>
 </body>
 
